--- a/Roller Coaster/Roller Coaster.vcxproj
+++ b/Roller Coaster/Roller Coaster.vcxproj
@@ -81,7 +81,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <PreprocessorDefinitions>UNICODE;WIN32;WIN64;QT_DLL;QT_CORE_LIB;QT_GUI_LIB;QT_WIDGETS_LIB;QT_OPENGL_LIB;QT_MULTIMEDIA_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>D:\opencv\build\include;.;.\Include;.\GeneratedFiles;.\GeneratedFiles\$(ConfigurationName);D:\OpenGL\armadillo-5.100.2\include;D:\OpenGL\freeglut\include;D:\Qt\Qt5.5.0\5.5\msvc2013\include;D:\Qt\Qt5.5.0\5.5\msvc2013\include\QtCore;D:\Qt\Qt5.5.0\5.5\msvc2013\include\QtGui;D:\Qt\Qt5.5.0\5.5\msvc2013\include\QtWidgets;D:\OgreSDK_vc10_v1-8-1\include;D:\OgreSDK_vc10_v1-8-1\include\OGRE;D:\OgreSDK_vc10_v1-8-1\include\OIS;D:\OgreSDK_vc10_v1-8-1\boost;$(QTDIR)\include\QtOpenGL;$(QTDIR)\include\QtMultimedia;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\OpenGL\glew-1.12.0\include\GL;D:\opencv\build\include;.;.\Include;.\GeneratedFiles;.\GeneratedFiles\$(ConfigurationName);D:\OpenGL\armadillo-5.100.2\include;D:\OpenGL\freeglut\include;D:\Qt\Qt5.5.0\5.5\msvc2013\include;D:\Qt\Qt5.5.0\5.5\msvc2013\include\QtCore;D:\Qt\Qt5.5.0\5.5\msvc2013\include\QtGui;D:\Qt\Qt5.5.0\5.5\msvc2013\include\QtWidgets;D:\OgreSDK_vc10_v1-8-1\include;D:\OgreSDK_vc10_v1-8-1\include\OGRE;D:\OgreSDK_vc10_v1-8-1\include\OIS;D:\OgreSDK_vc10_v1-8-1\boost;$(QTDIR)\include\QtOpenGL;$(QTDIR)\include\QtMultimedia;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Disabled</Optimization>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
@@ -94,8 +94,8 @@
       <SubSystem>Console</SubSystem>
       <OutputFile>$(OutDir)\$(ProjectName).exe</OutputFile>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>qtmaind.lib;Qt5Cored.lib;Qt5Guid.lib;Qt5Widgetsd.lib;Qt5OpenGLd.lib;glut.lib;glut32.lib;opengl32.lib;glu32.lib;Qt5Multimediad.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>D:\opencv\build\x86\vc12\lib;D:\OpenGL\freeglut\lib;D:\OpenGL\glut-3.7_Complied\lib;D:\Qt\Qt5.5.0\5.5\msvc2013\lib;D:\OgreSDK_vc10_v1-8-1\lib\debug;D:\OgreSDK_vc10_v1-8-1\boost\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>glew32.lib;qtmaind.lib;Qt5Cored.lib;Qt5Guid.lib;Qt5Widgetsd.lib;Qt5OpenGLd.lib;glut.lib;glut32.lib;opengl32.lib;glu32.lib;Qt5Multimediad.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>D:\OpenGL\glew-1.12.0\lib\Release\Win32;D:\opencv\build\x86\vc12\lib;D:\OpenGL\freeglut\lib;D:\OpenGL\glut-3.7_Complied\lib;D:\Qt\Qt5.5.0\5.5\msvc2013\lib;D:\OgreSDK_vc10_v1-8-1\lib\debug;D:\OgreSDK_vc10_v1-8-1\boost\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -183,6 +183,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="Include\Shader\Shader_Loader.cpp" />
     <ClCompile Include="Src\AppMain.cpp" />
     <ClCompile Include="Src\ControlPoint.cpp" />
     <ClCompile Include="Src\Load3DModel\3DSLoader.cpp" />
@@ -228,6 +229,8 @@
     <ClInclude Include="Include\Load3DModel\point3d.h" />
     <ClInclude Include="Include\Load3DModel\TGATexture.h" />
     <ClInclude Include="Include\Load3DModel\vector.h" />
+    <ClInclude Include="Include\Shader\Shader_Loader.h" />
+    <ClInclude Include="Include\Shader\SimpleShaderHandler.h" />
     <ClInclude Include="Include\Track.H" />
     <CustomBuild Include="Include\TrainView.h">
       <Message Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Moc%27ing TrainView.h...</Message>
@@ -289,6 +292,10 @@
       <Command Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">"$(QTDIR)\bin\rcc.exe" -name "%(Filename)" -no-compress "%(FullPath)" -o .\GeneratedFiles\qrc_%(Filename).cpp</Command>
       <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">"$(QTDIR)\bin\rcc.exe" -name "%(Filename)" -no-compress "%(FullPath)" -o .\GeneratedFiles\qrc_%(Filename).cpp</Command>
     </CustomBuild>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Include\Shader\fragment.frag" />
+    <None Include="Include\Shader\vertex.vs" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
